Fix alignment issues

--- a/src/_typography.css
+++ b/src/_typography.css
@@ -47,6 +47,7 @@ h6 { text-transform: uppercase; }
   display: inline;
   background-repeat: repeat-x;
   background-size: 100% 15%;
+  background-position: bottom;
 }
 
 /* Underline types */
